--- a/template.yaml
+++ b/template.yaml
@@ -873,4 +873,4 @@ Outputs:
   FileSystemId:
     Value: !If [IsEmpty, !Ref EmptyEfs, !Ref RecoveredEfs]
   Arn:
-    Value: !If [IsEmpty, !GetAtt EmptyEfs.Arn, !Sub arn:aws:elasticfilesystem:{AWS::Region}:{AWS::AccountId}:file-system/{RecoveredEfs}]
+    Value: !If [IsEmpty, !GetAtt EmptyEfs.Arn, !Sub "arn:aws:elasticfilesystem:${AWS::Region}:${AWS::AccountId}:file-system/${RecoveredEfs}"]
